# pytest-ty

./: .gitattributes  .gitignore  README.md  README.rst  pyproject.toml  tox.ini
.github/: dependabot.yml  release.yaml
.github/workflows/: main.yaml  main.yml  publish.yaml  publish.yml
src/pytest_ty/: plugin.py
tests/: conftest.py  test_pytest_ty.py
