[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ty"
description = "A pytest plugin to run the ty type checker"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name = "Raphael Boidol", email = "boidolr@users.noreply.github.com" },
]
maintainers = [
    { name = "Raphael Boidol", email = "boidolr@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["pytest>=7.0.0", "ty"]
[project.urls]
Repository = "https://github.com/boidolr/pytest-ty"
[project.entry-points.pytest11]
ty = "pytest_ty.plugin"
